# servant-elm-street

./: .gitignore  ChangeLog.md  LICENSE  README.md  package.yaml  servant-elm-street.cabal  stack.yaml
app/: Main.hs
examples/backend/: backend.cabal  package.yaml
examples/backend/app/: Main.hs
examples/backend/src/: ExampleAPI.hs
examples/frontend/: elm.json
examples/frontend/src/: Main.elm
examples/servant-elm-street-main/: README.md  package.yaml  servant-elm-street-main.cabal  stack.yaml
examples/servant-elm-street-main/app/: Main.hs
examples/servant-elm-street-main/src/: ExampleAPI.hs  ExampleApi.hs
src/: ServantElm.hs
