cabal-version: 1.12

name:           servant-elm-street-main
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/servant-elm-street-main#readme>
homepage:       https://github.com/githubuser/servant-elm-street-main#readme
bug-reports:    https://github.com/githubuser/servant-elm-street-main/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2022 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/servant-elm-street-main

library
  exposed-modules:
      ExampleApi
  other-modules:
      Paths_servant_elm_street_test
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , elm-street
    , servant
  default-language: Haskell2010

executable servant-elm-street-main-exe
  main-is: Main.hs
  other-modules:
      Paths_servant_elm_street_test
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , elm-street
    , servant
    , servant-elm-street-main
  default-language: Haskell2010

test-suite servant-elm-street-main-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_servant_elm_street_test
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , elm-street
    , servant
    , servant-elm-street-main
  default-language: Haskell2010
